# OVHL

./: .gitignore  .prettierignore  .prettierrc  README.md  TODO.md  eslint.config.mjs  jest.config.js  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  shadcn-docs.json
backend/: BACKEND.md  README.md
backend/services/stats_service/: Dockerfile  pyproject.toml  requirements.txt  routes.py
backend/services/stats_service/src/ea_api/: get_games_request.py
backend/services/stats_service/src/in_progress/: pandas_testing.py  player_war_results.csv  war.py  war_ml_analysis.py
backend/services/stats_service/src/in_progress/ml_outputs/: cluster_examples.txt  feature_importance.csv  player_similarity_examples.txt  position_importance.csv  summary_report.txt
backend/services/stats_service/src/in_progress/outputs/: match_0.json  match_1.json  match_10.json  match_11.json  match_12.json  match_13.json  match_14.json  match_15.json  match_16.json  match_17.json  match_18.json  match_19.json  match_2.json  match_20.json  match_21.json  match_23.json  match_24.json  match_25.json  match_27.json  match_28.json  match_29.json  match_30.json  match_31.json  match_32.json  match_33.json  match_34.json  match_35.json  match_36.json  match_37.json  match_38.json  match_39.json  match_4.json  match_40.json  match_41.json  match_42.json  match_43.json  match_44.json  match_45.json  match_46.json  match_47.json  (+741 more)
backend/services/stats_service/src/in_progress/pytorch/: embedding_model.pt  multitask_model.pt
backend/services/stats_service/src/models/: __init__.py
backend/services/stats_service/src/models/match_response/: __init__.py  base.py  club_match_stats.py  match_analytics.py  players_match_stats.py
backend/services/stats_service/src/utils/: __init__.py  match_type_validator.py  web_request.py
backend/stats_service/: README.md  app.py  compose.yml  pyproject.toml  routes.py
backend/stats_service/src/ea_api/: __init__.py  get_club_request.py  get_games_request.py
backend/stats_service/src/in_progress/: flatten.py  war_pytorch.py
backend/stats_service/src/models/: __init__.py
backend/stats_service/src/models/club_response/: __init__.py  club_data.py
backend/stats_service/src/models/match_response/: __init__.py  club_match_stats.py  match.py  match_analytics.py  players_match_stats.py
backend/stats_service/src/utils/: __init__.py  platform_validator.py  web_request.py
(+627 files in other folders)
