[project]
name = "stats-service"
version = "0.1.0"
description = "A service for interacting with the EA NHL Proclubs API and getting data in a format suitable for frontend use."
authors = [
    {name = "Spencer Presley",email = "153392395+SpencerPresley@users.noreply.github.com"}
]
license = {text = "Proprietary"}
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.10.6",
    "requests==2.32.3",
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "python-dotenv==1.0.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "filelock==3.18.0",
    "fonttools==4.56.0",
    "fsspec==2025.3.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pydantic-core==2.27.2",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==76.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "torch==2.6.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
